@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Disk Usage Analyser
-_Comment=A graphical tool to analyse disk usage
-_GenericName=Disk Usage Analyser
+_Name=Disk Usage Analyzer
+_Comment=A graphical tool to analyze disk usage
+_GenericName=Disk Usage Analyzer
 TryExec=baobab
 Exec=baobab
 Icon=baobab
